assets/styles/styles.css
:root {
  /* Color Palette */
  --primary-color: #3498db;
  --secondary-color: #fff;
  --text-color: #333;
  --background-color: #f4f4f4;
  --heading-color: #000;
  --button-hover-bg: #fff;
  --button-hover-color: #3498db;

  /* Font Sizes */
  --font-large: 3rem;
  --font-medium: 1.5rem;
  --font-small: 1rem;

  /* Spacing */
  --spacing-small: 8px;
  --spacing-medium: 16px;
  --spacing-large: 32px;

  /* Shadows */
  --box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
}

/* 1. Reset default browser styles */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body, html {
  margin: 0;
  padding: 0;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  height: 100%;
  background-color: #f0f4f8;
}

body {
  /* line-height: 1.6; */
  background-color: var(--background-color);
  color: var(--text-color);
}

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 8px 25px;
  background-color: #ffffff;
  position: sticky;
  top: 0;
  z-index: 1001;
  box-shadow: 0 2px 10px rgba(34, 39, 176, 0.1);
}

.navbar-brand {
  font-size: 28px;
  font-weight: bold;
  color: #4a4a4a;
  text-decoration: none;
}

.nav-desktop {
  display: none;
}

.nav-desktop a {
  margin: 0 20px;
  text-decoration: none;
  color: #4a4a4a;
  font-size: 18px;
  transition: color 0.3s ease;
}

.nav-desktop a:hover {
  color: #3498db;
}

.menu-toggle {
  background: transparent;
  border: none;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 30px;
  height: 30px;
  position: relative;
  z-index: 1002;
}

.menu-toggle span,
.menu-toggle span::before,
.menu-toggle span::after {
  content: '';
  display: block;
  background: #4a4a4a;
  height: 2px;
  width: 30px;
  transition: all 0.3s ease-in-out;
  position: absolute;
}

.menu-toggle span::before {
  transform: translateY(-10px);
}

.menu-toggle span::after {
  transform: translateY(10px);
}

.menu-toggle.open span {
  background: transparent;
}

.menu-toggle.open span::before {
  transform: rotate(45deg);
}

.menu-toggle.open span::after {
  transform: rotate(-45deg);
}

.nav-container {
  position: fixed;
  top: 0.01;
  right: -300px;
  width: 300px;
  height: 100%;
  background-color: #ffffff;
  box-shadow: -5px 10px 15px rgba(25, 33, 144, 0.1);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  transition: right 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
  z-index: 1000;
}

.nav-container.open {
  right: 0;
}

.nav-items {
  padding: 80px 40px 0;
}

.nav-items a {
  display: block;
  padding: 20px 0;
  text-decoration: none;
  color: #4a4a4a;
  border-bottom: 1px solid #eee;
  font-size: 20px;
  transition: color 0.3s ease;
}

.nav-items a:hover {
  color: #3498db;
}

.social-icons {
  display: flex;
  justify-content: center;
  padding-bottom: 40px;
}

.social-icons a {
  margin: 0 15px;
  color: #4a4a4a;
  text-decoration: none;
  font-size: 24px;
  transition: color 0.3s ease;
}

.social-icons a:hover {
  color: #3498db;
}

@media (min-width: 769px) {
  .menu-toggle {
      display: none;
  }

  .nav-desktop {
      display: flex;
      justify-content: center;
      align-items: center;
  }

  .nav-container {
      display: none;
  }
}

@media (max-width: 768px) {
  .nav-container {
      height: 80%;
  }

  .nav-items {
      padding: 60px 30px 0;
  }

  .nav-items a {
      font-size: 18px;
      padding: 15px 0;
  }

  .social-icons {
      padding-bottom: 30px;
  }
}
/* logo secrtion */
.navbar-logo {
  width: 100px; /* Adjust as needed */
  height: auto; /* Maintain aspect ratio */
}
/* For tablets (between 768px and 1024px) */
@media (min-width: 768px) and (max-width: 1024px) {
  #logo {
      content: url('../images/logo1.png'); /* Change logo for tablet view */
      width: 80px; /* Adjust size for tablets */
  }
}

/* For mobile devices (below 768px) */
@media (max-width: 767px) {
  #logo {
      content: url('../images/logo1.png'); /* Change logo for mobile view */
      width: 60px; /* Adjust size for mobile */
  }
}
/* Responsive Landing Page Image */
.journey-section {
  background-color: var(--secondary-color);
  padding: var(--spacing-small);
  display: flex;
  justify-content: center;
  align-items: center;
}

.journey-container {
  position: relative;
  width: 100%;
  max-width: 1200px; /* Max width to control size on large screens */
}

.journey-title {
  font-size: 5rem;
  font-weight: bold;
  line-height: 1.2;
  margin-bottom: var(--spacing-medium);
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  text-align: center;
  z-index: 2;
  padding: var(--spacing-medium);
  margin-top: 30px;
}

@media (max-width: 1200px) {
  .journey-title {
    font-size: 4rem; 
  }
}

@media (max-width: 768px) {
  .journey-title {
    font-size: 2rem; 
  }
}

@media (max-width: 480px) {
  .journey-title {
    font-size: 1rem; 
  }
}

.journey-title .begin-your {
  color: var(--heading-color);
  transition: color 0.3s ease;
}

.journey-title .journey {
  color: transparent;
  -webkit-text-stroke: 2px var(--heading-color);
  transition: color 0.3s ease, -webkit-text-stroke 0.3s ease;
}

.journey-title:hover .begin-your {
  color: transparent;
  -webkit-text-stroke: 2px var(--heading-color);
}

.journey-title:hover .journey {
  color: var(--heading-color);
  -webkit-text-stroke: 0;
}


.journey-card {
  background-image: url("../images/FirstPageillustration1.svg");
  background-size: cover;
  background-position: center;
  border-radius: 25px;
  padding: var(--spacing-large);
  color: white;
  position: relative;
  overflow: hidden;
  margin: var(--spacing-medium); /* Uniform margin on all sides */
  width: 100vw; /* Full width of the parent container */
  height: 90vh; /* Adjust to your preferred height */
  filter: brightness(0.9); /* Slightly darken the image */
}

/* @media (min-width: 768px) {
  .journey-card {
    margin: var(--spacing-medium) 40px;
  }
}
/* ... */

